--- a/DRAFT/app/src/main/AndroidManifest.xml
+++ b/DRAFT/app/src/main/AndroidManifest.xml
@@ -2,26 +2,33 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.ablesson1">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name="com.example.ablesson1.history.App"
+        android:name=".history.App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.example.ablesson1.DevelopersActivity" />
-        <activity android:name="com.example.ablesson1.BaseActivity" />
-        <activity android:name="com.example.ablesson1.MainActivity">
+        <service android:name=".MyFirebaseService">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
+
+        <activity android:name=".DevelopersActivity" />
+        <activity android:name=".BaseActivity" />
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <!--<activity android:name=".SecondActivity" />--><!--После перехода на одну активити, данная активити не используется-->
-        <activity android:name="com.example.ablesson1.SettingsActivity" />
+        </activity> <!-- <activity android:name=".SecondActivity" /> -->
+        <!-- После перехода на одну активити, данная активити не используется -->
+        <activity android:name=".SettingsActivity" />
     </application>
 
 </manifest>
