ДЗ 8 + flavors: light - без location и google map full - c location и google map

--- a/DRAFT/app/build.gradle
+++ b/DRAFT/app/build.gradle
@@ -21,6 +21,20 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    flavorDimensions 'version'
+    productFlavors {
+        light {
+            dimension = 'version'
+            versionNameSuffix = '.light'
+            applicationIdSuffix = '.light'
+        }
+
+        full {
+            dimension = 'version'
+            versionNameSuffix = '.full'
+            applicationIdSuffix = '.full'
+        }
+    }
 }
 
 dependencies {
